--- a/PYTN_Assgn_1_4_AdjiePerdanaKusuma.ipynb
+++ b/PYTN_Assgn_1_4_AdjiePerdanaKusuma.ipynb
@@ -3232,7 +3232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Folium Map tersebut menampilkan kota martubung dengan zoom 20. Pada folium ini menggunakan tampilan sederhana agar cepat untuk di load."
+    "Folium Map tersebut menampilkan kota London dengan zoom 20. Pada folium ini menggunakan tampilan sederhana agar cepat untuk di load."
    ]
   },
   {
